--- a/app/src/main/res/layout/item_lab.xml
+++ b/app/src/main/res/layout/item_lab.xml
@@ -4,8 +4,7 @@
     android:id="@+id/llRoot"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@color/colorAccent"
-    android:orientation="vertical">
+    android:background="@color/colorAccent">
 
     <TextView
         android:id="@+id/tvLab"
